[project]
name = "pst2md"
version = "0.2.0"
description = "PST → Markdown archive pipeline with CLI search and Obsidian wiki (cross-platform)"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "html2text>=2024.2",
    "python-slugify>=8.0",
    "tqdm>=4.66",
    "mail-parser>=3.15",
    "python-dateutil>=2.9",
    "chardet>=5.2",
    "click>=8.1",
    "tomli>=2.0; python_version<'3.11'",  # Python 3.11 미만에서 tomllib 대체
]

[project.optional-dependencies]
# Linux/WSL: libpff-python (pypff) 기반 PST 파싱
linux = [
    "libpff-python",
]
# Windows Native: Outlook COM API
win32 = [
    "pywin32",
]

[project.scripts]
# 변환/인덱스/위키화
pst2md          = "scripts.pst2md:main"
build-index     = "scripts.build_index:main"
enrich          = "scripts.enrich:main"
verify          = "scripts.verify_integrity:main"
archive-monthly = "scripts.archive_monthly:main"
# 설정 관리
pst2md-config   = "scripts.config_cli:main"
# CLI 도구 (크로스플랫폼 Python 버전)
mailgrep        = "scripts.mailgrep:main"
mailview        = "scripts.mailview:main"
mailstat        = "scripts.mailstat:main"

# ── uv 전용 설정 ──────────────────────────────────────────────────────────
[tool.uv]
# 이 패키지 자체도 editable 모드로 설치 (scripts 패키지 import 가능)
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

# ── 개발 의존성 (uv dependency-groups) ───────────────────────────────────
# uv sync --group dev  →  pytest 등 개발 도구 설치
# pip install -e ".[dev]" 와 달리 배포 의존성과 명확히 분리됨
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",       # 린터 + 포매터
    "mypy>=1.10",      # 타입 체커
]
